# MiniLisp

./: README.md  minilisp.cabal  stack.yaml  test.minisp
Doc/: Proyecto01.tex  Retroalimentacion.tex
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: minilisp-1.0.0-inplace.conf  package.cache
examples/: factorial.minisp  fibonacci.minisp  filter(retroalimentacion).minisp  map(retroalimentacion).minisp  mcd.minisp  power.minisp  sum.minisp
src/: AST.hs  Desugar.hs  Eval.hs  Main.hs  Parser.hs  SurfaceAST.hs
test/: Tests.hs
