cabal-version: 2.2
name: minilisp
version: 1.1.5
synopsis: MiniLisp interpreter in Haskell
description: Complete implementation of MiniLisp for Programming Languages course
homepage: https://github.com/GiovanniAE/MiniLispApp.git
license: MIT
author: Giovanni Alejandri Espinosa, Vania Zoé Velazquez Barrientos, Camila Sánchez Flores
maintainer: giovanni.uni@ciencias.unam.mx
category: Language
build-type: Simple

common shared-properties
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
    base >= 4.16 && < 5,
    containers >= 0.6,
    mtl >= 2.2

executable minilisp
  import: shared-properties
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    AST,
    SurfaceAST,
    Parser,
    Desugar,
    Eval
  build-depends:
    megaparsec >= 9.2,
    parser-combinators >= 1.3,
    deepseq >= 1.4
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite minilisp-test
  import: shared-properties
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Tests.hs
  build-depends:
    minilisp,
    hspec >= 2.10,
    QuickCheck >= 2.14
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

library
  import: shared-properties
  hs-source-dirs: src
  exposed-modules:
    AST,
    SurfaceAST,
    Parser,
    Desugar,
    Eval
  build-depends:
    megaparsec >= 9.2,
    parser-combinators >= 1.3,
    deepseq >= 1.4